# structRFM

./: .gitignore  README.md  demo.py  demo_infer.py  environment.yaml  evaluation.py  main.py  main_infer.py  perplexity.py  pyproject.toml  run.sh  run_ar.sh  run_mlm.sh  structRFM_environment.yaml  tSNE.py
.github/workflows/: publish.yml
scripts/: run.sh  structRFM_SSP.py
src/NucleoLM/: infer.py  pretrain.py
src/NucleoLM/data/: RNAdata.py  __init__.py  collator.py  tokenizer_and_preprocess.py
src/NucleoLM/model/: __init__.py  modeling_RNALM.py
src/NucleoLM/tokenizer/: __init__.py  get_tokenizer.py  tokenizer_ar.json
src/NucleoLM/util/: RNA_kit.py
src/RNAStruBert/: infer.py  pretrain.py
src/RNAStruBert/data/: collator.py
src/RNAStruBert/model/: RNAStruBert.py  __init__.py
src/RNAStruBert/util/: RNAStruBert_util.py
src/SgRFM/: infer.py  pretrain.py
src/SgRFM/model/: SgRFM.py  __init__.py
src/structRFM/: infer.py  pretrain.py
src/structRFM/data/: RNAdata.py
src/structRFM/model/: structRFM.py
tasks/: README.md
tasks/IRES/: README.md  ensemble_auc_pth.py  environment.yaml  run_ensemble.slurm  run_train.slurm  train.py  train.sh  train_classification.py
tasks/IRES/data/: RNAGraph.py
tasks/IRES/model/: IreseekNet.py  load_net.py  loss.py  metrics.py
tasks/Zfold/: README.md  RNAeval.py  Zfold_environment.yaml  eval.py  pred_and_fold.py  run_RNAeval.py  run_pred_and_fold.py  structure_assessment.py
tasks/Zfold/src/Zfold/: fold.py  predict.py
tasks/Zfold/src/Zfold/RNAeval/: INF.py  RNA_assessment.py  (+4 more)
tasks/seqcls_ssp/: README.md  RNAdata.py  base_classes.py  collators.py  environment.yaml  run_seq_cls.py  run_seq_cls.sh  run_ss_pred.py  run_ss_pred.sh  seq_cls.py  ss_pred.py  trainers.py  utils.py
tasks/splice_site_prediction/: README.md  run_SPL.sh  train.py
tasks/zeroshot/: README.md  demo_task1.py  demo_task1_slurm.py  demo_task2_rfam.py  demo_task3_archiveII.py
tasks/zeroshot/extract_attns/: tools.py
tasks/zeroshot/extract_embs/: tools.py
tasks/zeroshot/task1_ss/: evaluate_heatmap.py  postprocess.py
(+11 files in other folders)
