[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SgRFM"
dynamic = ["version"]
readme = "README.md"
authors = [
  { name="Heqin Zhu", email="zhuheqin1@gmail.com" },
]
description = "Structure-aware RNA language pretraining."
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
#    "torch >= 2.0.1",
]

keywords = ["RNA", "secondary structure", "language model"]

[project.urls]
Homepage = "https://github.com/heqin-zhu/SgRFM"
Issues = "https://github.com/heqin-zhu/SgRFM/issues"

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"SgRFM.data" = ["*.json"]

[tool.setuptools.dynamic]
version = {attr = "SgRFM.__version__"}  # any module attribute compatible with ast.literal_eval
